png_dump complete. start font_dump

--- a/src/dune
+++ b/src/dune
@@ -1,6 +1,7 @@
 (executable
   (name pic_dump)
-  (libraries containers lzw imagelib))
+  (libraries containers iter lzw imagelib))
+
 
 (env
   (dev
