--- a/src/dune
+++ b/src/dune
@@ -2,7 +2,8 @@
   (name main)
   (libraries iter containers containers-data gen imagelib imagelib.unix tsdl owl-base)
   (preprocess (pps ppx_deriving.show ppx_deriving.enum ppx_deriving.eq ppx_deriving.ord lens.ppx_deriving))
-  (modes exe))
+  (modes exe)
+  )
 
 
 (env
