--- a/bin/dune
+++ b/bin/dune
@@ -2,7 +2,7 @@
   (public_name rails)
   (name main)
   (libraries iter containers containers-data gen imagelib imagelib.unix tsdl owl-base)
-  (preprocess (pps ppx_deriving.show ppx_deriving.enum ppx_deriving.eq ppx_deriving.ord lens.ppx_deriving ppx_hash))
+  (preprocess (staged_pps ppx_import ppx_deriving.show ppx_deriving.enum ppx_deriving.eq ppx_deriving.ord lens.ppx_deriving ppx_hash ppx_yojson_conv))
   (modes exe)
   )
 
