--- a/src/rails_lib/dune
+++ b/src/rails_lib/dune
@@ -4,7 +4,7 @@
   (libraries iter containers containers-data gen imagelib imagelib.unix tsdl owl-base ocamlgraph logs logs.fmt)
   (inline_tests)
   (preprocess
-    (staged_pps ppx_import ppx_deriving.show ppx_deriving.enum ppx_deriving.eq ppx_deriving.ord lens.ppx_deriving ppx_hash ppx_yojson_conv ppx_expect ppx_inline_test)
+    (staged_pps ppx_import ppx_deriving.show ppx_deriving.enum ppx_deriving.eq ppx_deriving.ord lens.ppx_deriving ppx_hash ppx_yojson_conv ppx_expect ppx_inline_test ppx_update)
     )
   )
 
