Work on fixing sound/music

--- a/src/rails_lib/dune
+++ b/src/rails_lib/dune
@@ -5,7 +5,8 @@
   (inline_tests)
   (wrapped true)
   (preprocess
-    (staged_pps ppx_import ppx_deriving.show ppx_deriving.enum ppx_deriving.eq ppx_deriving.ord ppx_hash ppx_yojson_conv ppx_expect ppx_inline_test ppx_update)
+    (staged_pps ppx_import ppx_deriving.show ppx_deriving.enum ppx_deriving.eq ppx_deriving.ord ppx_hash ppx_yojson_conv ppx_expect ppx_inline_test ppx_update
+                ppx_deriving_variant_string)
     )
   )
 
